--- a/cinema-hall-management-system/App.xaml
+++ b/cinema-hall-management-system/App.xaml
@@ -1,9 +1,12 @@
-﻿<Application x:Class="cinema_hall_management_system.App"
+﻿<Application
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:cinema_hall_management_system"
+             xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="cinema_hall_management_system.App"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <System:DayOfWeek x:Key="DayOfWeek1">Monday</System:DayOfWeek>
+
     </Application.Resources>
 </Application>
