--- a/cinema-hall-management-system/UI/EmployeeResgister.xaml
+++ b/cinema-hall-management-system/UI/EmployeeResgister.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="cinema_hall_management_system.UI.EmployeeResgister"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:cinema_hall_management_system.UI"
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="cinema_hall_management_system.UI.EmployeeResgister"
         mc:Ignorable="d"
         Title="Employeee Registration" Height="750" Width="800">
     <Grid>
@@ -21,12 +22,14 @@
         <TextBox x:Name="nameTextbox" HorizontalAlignment="Left" Height="34" Margin="295,196,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="375" TextChanged="NameTextbox_TextChanged"/>
         <TextBox x:Name="roleTextbox" HorizontalAlignment="Left" Height="34" Margin="295,366,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="375" TextChanged="RoleTextbox_TextChanged"/>
         <TextBox x:Name="addressTextbox" HorizontalAlignment="Left" Height="34" Margin="295,436,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="375" TextChanged="AddressTextbox_TextChanged"/>
-        <DatePicker x:Name="datePickerDOB" SelectedDate="2000-12-31" SelectedDateFormat="Long" HorizontalAlignment="Left" Margin="296,259,0,0" VerticalAlignment="Top" Width="374" Height="31"/>
         <ComboBox x:Name="genderSelector" HorizontalAlignment="Left" Margin="295,307,0,0" VerticalAlignment="Top" Width="375" Height="34" SelectionChanged="ComboBox_SelectionChanged">
-            <ComboBoxItem  IsSelected="True">Male</ComboBoxItem>
-            <ComboBoxItem>Female</ComboBoxItem>
+            <ComboBoxItem  IsSelected="True" Content="Male"/>
+            <ComboBoxItem Content="Female"/>
         </ComboBox>
         <Button x:Name="registerButton" Content="Register" HorizontalAlignment="Left" Margin="509,580,0,0" VerticalAlignment="Top" Width="161" Height="63" Click="RegisterButton_Click"/>
+        <DatePicker HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <DatePicker HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <DatePicker x:Name="datePickerDOB" HorizontalAlignment="Left" Margin="295,256,0,0" VerticalAlignment="Top" Width="375" FirstDayOfWeek="Saturday"/>
 
 
     </Grid>
