--- a/cinema-hall-management-system/UI/Movies.xaml
+++ b/cinema-hall-management-system/UI/Movies.xaml
@@ -23,8 +23,9 @@
                 </ListView.View>
             </ListView>
         </ListBox>
-        <Button x:Name="btnUpdate" Content="Update" HorizontalAlignment="Left" Margin="1414,77,0,0" VerticalAlignment="Top" Width="185" Height="104" FontSize="48" Click="BtnUpdate_Click"/>
+        <Button x:Name="btnUpdate" Content="Refresh" HorizontalAlignment="Left" Margin="1414,77,0,0" VerticalAlignment="Top" Width="185" Height="104" FontSize="48" Click="BtnRefresh_Click" FontWeight="Bold"/>
         <Button x:Name="btnAddMovie" Content="Add movie" HorizontalAlignment="Left" Margin="120,86,0,0" VerticalAlignment="Top" Width="255" Height="86" FontSize="36" FontWeight="Bold" Click="btnAddMovie_Click"/>
+        <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Left" Margin="1134,77,0,0" VerticalAlignment="Top" Width="219" Height="104" FontSize="48" FontWeight="Bold" Click="BtnDelete_Click"/>
 
     </Grid>
 </Window>
